--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <title>El werito</title>
-  <head>
-   <body>
-     <h1>titulo</h1>
-   </body>
+ 
+<body>
+  <h1>YOUR NAME</h1>
+  <p>Welcome to my website!</p>
+  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+</body>
+ 
 </html>
